--- a/config/config.json
+++ b/config/config.json
@@ -1,18 +1,18 @@
 {
 	"enabled": true,
-	"jitter_compensation": true,
-	"skill_retry_count": 1,
-	"skill_retry_ms": 30,
-	"skill_retry_jittercomp": 20,
-	"skill_retry_always": false,
-	"skill_delay_on_fail": true,
-	"server_timeout": 180,
-	"force_clip_strict": true,
-	"debug_glyphs": false,
+	"jitterCompensation": true,
+	"skillRetryCount": 1,
+	"skillRetryMs": 30,
+	"skillRetryJittercomp": 20,
+	"skillRetryAlways": false,
+	"skillDelayOnFail": true,
+	"serverTimeout": 180,
+	"forceClipStrict": true,
+	"debugGlyphs": false,
 	"debug": false,
-    "debug_abnormals": false,
-	"defend_success_strict": true,
-	"debug_loc": false,
-	"mount_check": true,
-	"body_rolls_check": false
+    "debugAbnormals": false,
+	"defendSuccessStrict": true,
+	"debugLoc": false,
+	"mountCheck": true,
+	"bodyRollsCheck": false
 }
