QoL mounted check + config switch (will be added more smt soon)
Message from standart client for QoL checks,
Some users hate system messages from standart client - added switch
P.S Will check later :3

--- a/config/config.json
+++ b/config/config.json
@@ -14,5 +14,6 @@
 	"defendSuccessStrict": true,
 	"debugLoc": false,
 	"mountCheck": true,
-	"bodyRollsCheck": false
+	"bodyRollsCheck": false,
+	"FakeSmt":true
 }
