--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-	"name": "skill-prediction",
-	"version": "2.1.0",
+	"name": "experimental-skill-prediction",
+	"version": "4.2.5",
 	"description": "Simulates skills client-side, eliminating ping-based delays and animation lock.",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/pinkipi/skill-prediction.git"
+		"url": "git+https://github.com/SaltyMonkey/skill-prediction.git"
 	},
-	"author": "Pinkie Pie",
+	"authors": "SaltyMonkey, Leyki, Yunfei",
+	"originalauthor": "Pinkie Pie",
 	"license": "GPL-3.0",
 	"bugs": {
-		"url": "https://github.com/pinkipi/skill-prediction/issues"
+		"url": "https://github.com/SaltyMonkey/skill-prediction/issues"
 	},
-	"homepage": "https://github.com/pinkipi/skill-prediction#readme"
+	"homepage": "https://github.com/SaltyMonkey/skill-prediction#readme"
 }
