--- a/config/config.json
+++ b/config/config.json
@@ -14,6 +14,5 @@
 	"defendSuccessStrict": true,
 	"debugLoc": false,
 	"mountCheck": true,
-	"bodyRollsCheck": false,
-	"FakeSmt":true
+	"bodyRollsCheck": false
 }
